--- a/amigosdegilbert/templates/base.html
+++ b/amigosdegilbert/templates/base.html
@@ -1,30 +1,37 @@
 {% load staticfiles %}
-<html>
+<html leng="es">
 <head>
+	<title>{{ doc.title }}</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- linkstyles -->
+	<link rel="stylesheet" media="screen" href="{% static 'css/bootstrap.min.css' %}"/>
+	<link rel="stylesheet" media="screen" href="{% static 'css/base.css' %}"/>
 	{% block linkstyle %}
 	{% endblock %}
-	<style>
-	</style>
 	<!-- styles -->
 	{% block style %}
 	{% endblock %}
-
-	<script></script>
+	<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+	<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}" ></script>
 	<!-- link scripts -->
 	{% block scripts %}
 	{% endblock %}
 </head>
 <body>
+	
 	{% block header %}
 		{% include 'header.html'  %}
 	{% endblock %}
-
-	{% block content %}
-	{% endblock %}
+	<div class="row content">
+		<div class="container">
+		{% block content %}
+		{% endblock %}
+		</div>
+	</div>
 
 	{% block footer %}
 		{% include 'footer.html'  %}
 	{% endblock %}
+
 </body>
 </html>
