--- a/amigosdegilbert/templates/noticias/index.html
+++ b/amigosdegilbert/templates/noticias/index.html
@@ -1,19 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="col-md-5">
-	<ul class="nav nav-pills nav-stacked" >
-		<li><a href="">Lorem ipsum dolor sit amet.</a></li>
-		<li><a href="">Illum eos quos odio nulla!</a></li>
-		<li><a href="">Sunt, pariatur autem non dolorem.</a></li>
-		<li><a href="">Enim recusandae in dicta quo.</a></li>
-		<li><a href="">Minus reiciendis cum omnis libero.</a></li>
-		<li><a href="">Tenetur, fugit velit debitis soluta.</a></li>
-		<li><a href="">Adipisci suscipit sint iste possimus.</a></li>
-		<li><a href="">Eveniet, in dolores ducimus culpa.</a></li>
-		<li><a href="">Dignissimos, corrupti eius voluptates magnam.</a></li>
-		<li><a href="">Doloribus, possimus alias dolorum voluptatibus.</a></li>
-	</ul>
-</div>
+
+<ul class="list-group col-md-5">
+	<li class="list-group-item"><a href="">Lorem ipsum dolor sit amet.</a></li>
+	<li class="list-group-item"><a href="">Est officiis illo deserunt dolores.</a></li>
+	<li class="list-group-item"><a href="">Accusantium, minima eveniet totam doloribus.</a></li>
+	<li class="list-group-item"><a href="">Eaque, a molestias repellendus inventore.</a></li>
+	<li class="list-group-item"><a href="">Mollitia ratione laborum vel maiores.</a></li>
+	<li class="list-group-item"><a href="">Itaque, temporibus possimus beatae dolor?</a></li>
+	<li class="list-group-item"><a href="">Delectus nostrum accusantium amet quia.</a></li>
+	<li class="list-group-item"><a href="">Unde, sunt beatae voluptate veritatis?</a></li>
+	<li class="list-group-item"><a href="">Sapiente, error excepturi laudantium cupiditate.</a></li>
+	<li class="list-group-item"><a href="">Eveniet, voluptatum similique fugit natus.</a></li>
+</ul>
 <div class="col-md-7">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, quasi repellat id minus eligendi numquam error distinctio unde quas vitae. Quam, explicabo, facilis, perspiciatis illo tempora aperiam eius sequi error voluptatibus autem officiis esse dicta quis laboriosam assumenda ipsam veritatis aspernatur sapiente et tenetur! Ex, cumque, est beatae iusto sunt labore repellendus voluptatibus aut consectetur aperiam consequatur quo velit magnam quas expedita dolore eligendi sapiente laboriosam hic reiciendis? Laborum, animi, deleniti, dolores, quibusdam porro impedit obcaecati officiis neque debitis id maxime mollitia quia non voluptatum maiores commodi sed eos molestiae nam aliquam minima sunt fugiat cumque dolore veritatis tempora iusto asperiores ad accusamus accusantium et illo facilis vero at deserunt iure nemo dolorem nulla incidunt pariatur tempore ut nisi a eius iste nihil corrupti voluptatibus molestias odit ratione! Explicabo, temporibus, culpa illo eveniet corrupti ratione iusto voluptatum asperiores provident cupiditate modi odit quaerat mollitia nostrum blanditiis non nulla sed porro atque soluta eos quisquam incidunt ipsa hic optio necessitatibus consectetur dolorem. Consectetur, culpa, ullam adipisci ratione dolorem magni alias laudantium officia dolor quaerat cumque tenetur ex ipsa doloribus quibusdam est provident odit odio quam nam rerum vero dolores corporis excepturi perferendis porro voluptas voluptatibus numquam sint error rem iure dolorum quo iusto consequatur consequuntur accusantium illo. Eius, voluptatum, necessitatibus expedita dolores dolorum earum aspernatur numquam aliquam tempora maxime quisquam magni tenetur perferendis fugiat aperiam ex veniam molestias blanditiis distinctio ratione vero possimus debitis excepturi fuga ullam labore dolor facere recusandae similique unde laboriosam minima nobis eaque assumenda autem voluptatem dolore non itaque error reiciendis. In, iusto, quas aliquid incidunt quidem suscipit provident corrupti fugit et omnis fugiat error voluptas eveniet soluta harum aspernatur placeat saepe nulla ratione quo perspiciatis possimus maxime eum tenetur libero dolores cupiditate magnam quaerat explicabo quod vero labore reprehenderit cumque quasi dolorum minima autem! Facere, optio, eos repellendus ipsa odit aut provident cumque quod nisi perferendis numquam quis dolor neque commodi harum omnis laboriosam quidem dolorum. Placeat, sunt, dignissimos, itaque nisi quis omnis numquam eius id deleniti ducimus ab dolorum unde dicta ut ad modi nostrum qui soluta accusamus assumenda iste perferendis consectetur natus fuga cupiditate molestiae libero ex repudiandae repellat sit. Possimus, ipsum, molestias, distinctio quis tempora ex voluptatibus dignissimos saepe doloremque et deleniti animi! Nesciunt, accusantium, esse, incidunt error eaque atque aliquam maxime illum mollitia culpa suscipit ratione quos distinctio totam consequuntur est fugiat animi magnam molestiae quas doloremque ex ea cumque necessitatibus praesentium saepe ipsum beatae non voluptatum odio porro quis accusamus molestias quo sed iusto ipsa. Culpa, accusamus, explicabo excepturi quas veniam vel aliquam tenetur earum laborum unde architecto fugiat blanditiis asperiores odit illum eligendi recusandae laudantium consequuntur in tempore. Deserunt, quam, rem ipsum nemo voluptatem accusantium consequatur atque labore tempora. Accusamus, quidem, culpa, esse, reprehenderit a vitae amet voluptatem in tempore libero molestiae atque laborum ullam ipsam recusandae doloremque expedita adipisci exercitationem optio quam distinctio tenetur perspiciatis numquam harum voluptatibus vel quia dolor officiis nisi! Fugit, eum, iusto harum odio numquam officia sapiente doloribus cumque repellendus nobis nostrum dolorum ducimus dolore.</div>
 {% endblock %}
