--- a/amigosdegilbert/templates/base.html
+++ b/amigosdegilbert/templates/base.html
@@ -11,7 +11,7 @@
 	<!-- styles -->
 	{% block style %}
 	{% endblock %}
-	<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+	<script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}" ></script>
 	<!-- link scripts -->
 	{% block scripts %}
@@ -23,9 +23,12 @@
 		{% include 'header.html'  %}
 	{% endblock %}
 	<div class="row content">
-		<div class="container">
 		{% block content %}
 		{% endblock %}
+		<div class="publicidad col-md-2" style="display: inline-block;">
+			<img src="{% static 'images/bono2010.gif' %}" alt="" />
+			<img src="{% static 'images/ban_noti.gif' %}" alt="" />
+			<img src="{% static 'images/ban_depor.gif' %}" alt="" />
 		</div>
 	</div>
 
