--- a/amigosdegilbert/templates/noticias/index.html
+++ b/amigosdegilbert/templates/noticias/index.html
@@ -1,18 +1,82 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block style %}
+<style>
+.noticia{
+	padding: 0px;
+}
+</style>
+{% endblock %}
 
-<ul class="list-group col-md-5">
-	<li class="list-group-item"><a href="">Lorem ipsum dolor sit amet.</a></li>
-	<li class="list-group-item"><a href="">Est officiis illo deserunt dolores.</a></li>
-	<li class="list-group-item"><a href="">Accusantium, minima eveniet totam doloribus.</a></li>
-	<li class="list-group-item"><a href="">Eaque, a molestias repellendus inventore.</a></li>
-	<li class="list-group-item"><a href="">Mollitia ratione laborum vel maiores.</a></li>
-	<li class="list-group-item"><a href="">Itaque, temporibus possimus beatae dolor?</a></li>
-	<li class="list-group-item"><a href="">Delectus nostrum accusantium amet quia.</a></li>
-	<li class="list-group-item"><a href="">Unde, sunt beatae voluptate veritatis?</a></li>
-	<li class="list-group-item"><a href="">Sapiente, error excepturi laudantium cupiditate.</a></li>
-	<li class="list-group-item"><a href="">Eveniet, voluptatum similique fugit natus.</a></li>
-</ul>
-<div class="col-md-7">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, quasi repellat id minus eligendi numquam error distinctio unde quas vitae. Quam, explicabo, facilis, perspiciatis illo tempora aperiam eius sequi error voluptatibus autem officiis esse dicta quis laboriosam assumenda ipsam veritatis aspernatur sapiente et tenetur! Ex, cumque, est beatae iusto sunt labore repellendus voluptatibus aut consectetur aperiam consequatur quo velit magnam quas expedita dolore eligendi sapiente laboriosam hic reiciendis? Laborum, animi, deleniti, dolores, quibusdam porro impedit obcaecati officiis neque debitis id maxime mollitia quia non voluptatum maiores commodi sed eos molestiae nam aliquam minima sunt fugiat cumque dolore veritatis tempora iusto asperiores ad accusamus accusantium et illo facilis vero at deserunt iure nemo dolorem nulla incidunt pariatur tempore ut nisi a eius iste nihil corrupti voluptatibus molestias odit ratione! Explicabo, temporibus, culpa illo eveniet corrupti ratione iusto voluptatum asperiores provident cupiditate modi odit quaerat mollitia nostrum blanditiis non nulla sed porro atque soluta eos quisquam incidunt ipsa hic optio necessitatibus consectetur dolorem. Consectetur, culpa, ullam adipisci ratione dolorem magni alias laudantium officia dolor quaerat cumque tenetur ex ipsa doloribus quibusdam est provident odit odio quam nam rerum vero dolores corporis excepturi perferendis porro voluptas voluptatibus numquam sint error rem iure dolorum quo iusto consequatur consequuntur accusantium illo. Eius, voluptatum, necessitatibus expedita dolores dolorum earum aspernatur numquam aliquam tempora maxime quisquam magni tenetur perferendis fugiat aperiam ex veniam molestias blanditiis distinctio ratione vero possimus debitis excepturi fuga ullam labore dolor facere recusandae similique unde laboriosam minima nobis eaque assumenda autem voluptatem dolore non itaque error reiciendis. In, iusto, quas aliquid incidunt quidem suscipit provident corrupti fugit et omnis fugiat error voluptas eveniet soluta harum aspernatur placeat saepe nulla ratione quo perspiciatis possimus maxime eum tenetur libero dolores cupiditate magnam quaerat explicabo quod vero labore reprehenderit cumque quasi dolorum minima autem! Facere, optio, eos repellendus ipsa odit aut provident cumque quod nisi perferendis numquam quis dolor neque commodi harum omnis laboriosam quidem dolorum. Placeat, sunt, dignissimos, itaque nisi quis omnis numquam eius id deleniti ducimus ab dolorum unde dicta ut ad modi nostrum qui soluta accusamus assumenda iste perferendis consectetur natus fuga cupiditate molestiae libero ex repudiandae repellat sit. Possimus, ipsum, molestias, distinctio quis tempora ex voluptatibus dignissimos saepe doloremque et deleniti animi! Nesciunt, accusantium, esse, incidunt error eaque atque aliquam maxime illum mollitia culpa suscipit ratione quos distinctio totam consequuntur est fugiat animi magnam molestiae quas doloremque ex ea cumque necessitatibus praesentium saepe ipsum beatae non voluptatum odio porro quis accusamus molestias quo sed iusto ipsa. Culpa, accusamus, explicabo excepturi quas veniam vel aliquam tenetur earum laborum unde architecto fugiat blanditiis asperiores odit illum eligendi recusandae laudantium consequuntur in tempore. Deserunt, quam, rem ipsum nemo voluptatem accusantium consequatur atque labore tempora. Accusamus, quidem, culpa, esse, reprehenderit a vitae amet voluptatem in tempore libero molestiae atque laborum ullam ipsam recusandae doloremque expedita adipisci exercitationem optio quam distinctio tenetur perspiciatis numquam harum voluptatibus vel quia dolor officiis nisi! Fugit, eum, iusto harum odio numquam officia sapiente doloribus cumque repellendus nobis nostrum dolorum ducimus dolore.</div>
+{% block content %}
+<div class="titulos col-md-4">
+	<div class="panel panel-success">
+		  <!-- Default panel contents -->
+		<div class="panel-heading">Noticias Recientes</div>
+
+		<!-- List group -->
+		<div class="list-group">
+			<a href="" class="list-group-item">
+				<h4 class="list-group-item-heading">Lorem ipsum dolor sit amet.</h4>
+				<p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, est eos explicabo atque dolores possimus.</p>
+			</a>
+			<a href="" class="list-group-item">
+				<h4 class="list-group-item-heading">Aspernatur, ipsam impedit pariatur quod?</h4>
+				<p class="list-group-item-text">Asperiores nobis minima exercitationem temporibus numquam! Tempore fugit repellendus reiciendis ex ullam dolores quas cum.</p>
+			</a>
+			<a href="" class="list-group-item active">
+				<h4 class="list-group-item-heading">Quos explicabo officia quaerat ab!</h4>
+				<p class="list-group-item-text">Ut, doloribus a numquam dolore animi fuga quod maiores asperiores. Nihil quis odio dolorem minus!</p>
+			</a>
+			<a href="" class="list-group-item">
+				<h4 class="list-group-item-heading">Vero, repellat dolorum error provident.</h4>
+				<p class="list-group-item-text">Facilis, tenetur, dolores, minima, recusandae accusamus sequi aliquid ad dolorem laudantium odio deserunt suscipit nam.</p>
+			</a>
+			<a href="" class="list-group-item">
+				<h4 class="list-group-item-heading">Consequatur, laborum velit sapiente aut.</h4>
+				<p class="list-group-item-text">Praesentium dolorem nihil earum eum. Ipsa, magnam autem nulla repellat nemo ex quaerat nesciunt ducimus.</p>
+			</a>
+			<a href="" class="list-group-item">
+				<h4 class="list-group-item-heading">Mollitia, nobis ratione quas delectus.</h4>
+				<p class="list-group-item-text">Expedita, placeat, repellendus dolorem ratione tempora quidem maiores id quis nostrum sit debitis molestias magni.</p>
+			</a>
+			<a href="" class="list-group-item">
+				<h4 class="list-group-item-heading">Quidem, ut quae molestiae maiores!</h4>
+				<p class="list-group-item-text">Enim, facere, voluptatibus soluta dolorum fugit sunt nisi impedit corrupti magni recusandae pariatur repudiandae a.</p>
+			</a>
+			<a href="" class="list-group-item">
+				<h4 class="list-group-item-heading">Provident, voluptates nam deserunt explicabo!</h4>
+				<p class="list-group-item-text">Voluptas, temporibus, nostrum, quis, modi adipisci accusantium suscipit id excepturi doloribus quibusdam quisquam molestias cumque.</p>
+			</a>
+			<a href="" class="list-group-item">
+				<h4 class="list-group-item-heading">Unde, qui dolorem explicabo tenetur.</h4>
+				<p class="list-group-item-text">Perferendis, nam, odit, eaque rem omnis velit quae ratione repellendus id fuga provident delectus tempora.</p>
+			</a>
+			<a href="" class="list-group-item">
+				<h4 class="list-group-item-heading">Excepturi sint voluptatem quod quam.</h4>
+				<p class="list-group-item-text">Dolores, quo, ipsum, aliquam, voluptates id maxime dignissimos autem ad possimus animi quae repudiandae modi!</p>
+			</a>
+			<a href="" class="list-group-item">
+				<h4 class="list-group-item-heading">Consectetur, ullam mollitia cum magnam.</h4>
+				<p class="list-group-item-text">Facilis, deserunt recusandae provident et aliquid velit fugit eum perspiciatis accusamus reiciendis deleniti dolore totam!</p>
+			</a>
+			<a href="" class="list-group-item">
+				<h4 class="list-group-item-heading">Libero, aspernatur magni voluptates adipisci?</h4>
+				<p class="list-group-item-text">Magni, maiores, aspernatur, beatae et cumque cum corrupti molestias unde non dolores illum ex nemo?</p>
+			</a>
+			<a href="" class="list-group-item">
+				<h4 class="list-group-item-heading">Repellendus, dolorem atque vero doloremque!</h4>
+				<p class="list-group-item-text">Quibusdam, possimus laborum dolor cupiditate assumenda eius fuga a! Repellendus commodi quia totam esse quasi.</p>
+			</a>
+		</div>
+	</div>
+</div>
+<div class="noticia col-md-6">
+	<div class="panel panel-primary">
+		<div class="panel-heading">Quos explicabo officia quaerat ab!</div>
+		<div class="panel-body">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, quasi repellat id minus eligendi numquam error distinctio unde quas vitae. Quam, explicabo, facilis, perspiciatis illo tempora aperiam eius sequi error voluptatibus autem officiis esse dicta quis laboriosam assumenda ipsam veritatis aspernatur sapiente et tenetur! Ex, cumque, est beatae iusto sunt labore repellendus voluptatibus aut consectetur aperiam consequatur quo velit magnam quas expedita dolore eligendi sapiente laboriosam hic reiciendis? Laborum, animi, deleniti, dolores, quibusdam porro impedit obcaecati officiis neque debitis id maxime mollitia quia non voluptatum maiores commodi sed eos molestiae nam aliquam minima sunt fugiat cumque dolore veritatis tempora iusto asperiores ad accusamus accusantium et illo facilis vero at deserunt iure nemo dolorem nulla incidunt pariatur tempore ut nisi a eius iste nihil corrupti voluptatibus molestias odit ratione! Explicabo, temporibus, culpa illo eveniet corrupti ratione iusto voluptatum asperiores provident cupiditate modi odit quaerat mollitia nostrum blanditiis non nulla sed porro atque soluta eos quisquam incidunt ipsa hic optio necessitatibus consectetur dolorem. Consectetur, culpa, ullam adipisci ratione dolorem magni alias laudantium officia dolor quaerat cumque tenetur ex ipsa doloribus quibusdam est provident odit odio quam nam rerum vero dolores corporis excepturi perferendis porro voluptas voluptatibus numquam sint error rem iure dolorum quo iusto consequatur consequuntur accusantium illo. Eius, voluptatum, necessitatibus expedita dolores dolorum earum aspernatur numquam aliquam tempora maxime quisquam magni tenetur perferendis fugiat aperiam ex veniam molestias blanditiis distinctio ratione vero possimus debitis excepturi fuga ullam labore dolor facere recusandae similique unde laboriosam minima nobis eaque assumenda autem voluptatem dolore non itaque error reiciendis. In, iusto, quas aliquid incidunt quidem suscipit provident corrupti fugit et omnis fugiat error voluptas eveniet soluta harum aspernatur placeat saepe nulla ratione quo perspiciatis possimus maxime eum tenetur libero dolores cupiditate magnam quaerat explicabo quod vero labore reprehenderit cumque quasi dolorum minima autem! Facere, optio, eos repellendus ipsa odit aut provident cumque quod nisi perferendis numquam quis dolor neque commodi harum omnis laboriosam quidem dolorum. Placeat, sunt, dignissimos, itaque nisi quis omnis numquam eius id deleniti ducimus ab dolorum unde dicta ut ad modi nostrum qui soluta accusamus assumenda iste perferendis consectetur natus fuga cupiditate molestiae libero ex repudiandae repellat sit. Possimus, ipsum, molestias, distinctio quis tempora ex voluptatibus dignissimos saepe doloremque et deleniti animi! Nesciunt, accusantium, esse, incidunt error eaque atque aliquam maxime illum mollitia culpa suscipit ratione quos distinctio totam consequuntur est fugiat animi magnam molestiae quas doloremque ex ea cumque necessitatibus praesentium saepe ipsum beatae non voluptatum odio porro quis accusamus molestias quo sed iusto ipsa. Culpa, accusamus, explicabo excepturi quas veniam vel aliquam tenetur earum laborum unde architecto fugiat blanditiis asperiores odit illum eligendi recusandae laudantium consequuntur in tempore. Deserunt, quam, rem ipsum nemo voluptatem accusantium consequatur atque labore tempora. Accusamus, quidem, culpa, esse, reprehenderit a vitae amet voluptatem in tempore libero molestiae atque laborum ullam ipsam recusandae doloremque expedita adipisci exercitationem optio quam distinctio tenetur perspiciatis numquam harum voluptatibus vel quia dolor officiis nisi! Fugit, eum, iusto harum odio numquam officia sapiente doloribus cumque repellendus nobis nostrum dolorum ducimus dolore.
+		</div>
+	</div>
+</div>
 {% endblock %}
