--- a/amigosdegilbert/templates/base.html
+++ b/amigosdegilbert/templates/base.html
@@ -2,6 +2,7 @@
 <html leng="es">
 <head>
 	<title>{{ doc.title }}</title>
+	<meta charset="utf-8" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- linkstyles -->
 	<link rel="stylesheet" media="screen" href="{% static 'css/bootstrap.min.css' %}"/>
