--- a/amigosdegilbert/templates/footer.html
+++ b/amigosdegilbert/templates/footer.html
@@ -1,1 +1,3 @@
-<p>Desarrollado por Corujo Martin y Siri Ricardo &copy; </p>
+<div id="span12">
+	<p>Desarrollado por Corujo Martin y Siri Ricardo &copy; </p>
+</div>
