diseño reformado en verde

--- a/amigosdegilbert/templates/footer.html
+++ b/amigosdegilbert/templates/footer.html
@@ -1,1 +1,1 @@
-<p>Desarrollado por Corujo Martin y Siri Ricardo &copy; </p>
+<nav class="navbar navbar-default"><h5>Desarrollado por Corujo Martin y Siri Ricardo &copy;</h5></nav>
