--- a/amigosdegilbert/templates/base.html
+++ b/amigosdegilbert/templates/base.html
@@ -18,10 +18,11 @@
 	{% endblock %}
 </head>
 <body>
-	
+	<div class="row header">
 	{% block header %}
 		{% include 'header.html'  %}
 	{% endblock %}
+	</div>
 
 	<div class="row content">
 		{% block content %}
@@ -33,9 +34,10 @@
 		</div>
 	</div>
 
+	<div class="row footer">
 	{% block footer %}
 		{% include 'footer.html'  %}
 	{% endblock %}
-
+	</div>
 </body>
 </html>
