--- a/amigosdegilbert/templates/header.html
+++ b/amigosdegilbert/templates/header.html
@@ -1,19 +1,17 @@
 {% load staticfiles %}
-<div class="row">
-	<nav class="navbar navbar-default navbar-fixed-top">
-		<ul class="nav navbar-nav">
-			<li class="active"><a href="#">Noticias</a></li>
-			<li><a href="#">Galleria</a></li>
-			<li><a href="#">Proyectos</a></li>
-			<li><a href="#">Colaboradores</a></li>
-		</ul>
-		<form class="navbar-form navbar-left" role="search">
-			<div class="form-group">
-				<input type="text" class="buscar form-control" placeholder="Buscar">
-			</div>
-			<button type="submit" class="btn btn-success">Buscar</button>
-		</form>
-		<a class="navbar-brand" href="#">Fundacion Amigos de Gilbert</a>
-		<img src="{% static 'images/logo.png' %}" alt="" class="logo">
-	</nav>
-</div>
+<nav class="navbar navbar-default navbar-fixed-top">
+	<ul class="nav navbar-nav">
+		<li class="active"><a href="#">Noticias</a></li>
+		<li><a href="#">Galleria</a></li>
+		<li><a href="#">Proyectos</a></li>
+		<li><a href="#">Colaboradores</a></li>
+	</ul>
+	<form class="navbar-form navbar-left" role="search">
+		<div class="form-group">
+			<input type="text" class="buscar form-control" placeholder="Buscar">
+		</div>
+		<button type="submit" class="btn btn-default">Buscar</button>
+	</form>
+	<a class="navbar-brand" href="#">Fundacion Amigos de Gilbert</a>
+	<img src="{% static 'images/logo.png' %}" alt="" class="logo">
+</nav>
