cambio de fondo y el panel

--- a/amigosdegilbert/static/css/base.css
+++ b/amigosdegilbert/static/css/base.css
@@ -1,4 +1,4 @@
-body{ background-color: #444; }
+body{ background-color: #617bD2; }
 .content{ margin-top: 60px; margin-left: 0px;}
 .logo{ height: 50px; }
 .navbar .nav{ margin-left: 15px; }
