template de la galleria

--- a/amigosdegilbert/templates/header.html
+++ b/amigosdegilbert/templates/header.html
@@ -2,8 +2,8 @@
 <div class="row">
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<ul class="nav navbar-nav">
-			<li class="active"><a href="#">Noticias</a></li>
-			<li><a href="#">Galleria</a></li>
+			<li class="active"><a href="/">Noticias</a></li>
+			<li><a href="/galleria/">Galleria</a></li>
 			<li><a href="#">Proyectos</a></li>
 			<li><a href="#">Colaboradores</a></li>
 		</ul>
