--- a/amigosdegilbert/templates/base.html
+++ b/amigosdegilbert/templates/base.html
@@ -25,6 +25,14 @@
 	{% endblock %}
 	</div>
 
+	<div id="menu-left">
+		<ul id="opciones">
+			<li href="#">Facebook</li>
+			<li href="#">Twitter</li>
+			<li href="#">Contacto</li>
+		</ul>
+	</div>
+	
 	<div class="row content">
 		{% block content %}
 		{% endblock %}
