--- a/amigosdegilbert/templates/footer.html
+++ b/amigosdegilbert/templates/footer.html
@@ -1,2 +1,2 @@
-<nav class="navbar navbar-default"><h5>Desarrollado por Corujo Martin y Siri Ricardo &copy;</h5></nav>
+<nav class="navbar navbar-default"><h5>Desarrollado por Corujo Martin y Siri Ricardo &copy; Derechos Reservados.</h5></nav>
 
