--- a/amigosdegilbert/templates/header.html
+++ b/amigosdegilbert/templates/header.html
@@ -1,26 +1,26 @@
 {% load staticfiles %}
-<div class="row">
-	<nav class="navbar navbar-default navbar-fixed-top">
-		<ul class="nav navbar-nav">
-			{% for navItem in navBar %}
-				{% if navItem.url == currentNav  %}
-			<li class="active">
-				{% else %}
-			<li>
-				{% endif %}
-				<a href="/{{ navItem.url }}/" class="glyphicon glyphicon-{{ navItem.icon }}"> {{ navItem.url|capfirst }}</a>
-			</li>
-			
-			{% endfor %}
-			
-		</ul>
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+	<div class="up_wrap pull-left">
+		<span class="logo pull-left" ></span>
+		<a class="navbar-brand" href="/">Fundacion Amigos de Gilbert</a>
 		<form class="navbar-form navbar-left" role="search">
 			<div class="form-group">
-				<input type="text" class="buscar form-control" placeholder="Buscar">
+				<input type="text" class="buscar form-control" id="buscador" placeholder="Buscar">
 			</div>
 			<button type="submit" class="btn btn-success">Buscar</button>
 		</form>
-		<a class="navbar-brand" href="#">Fundacion Amigos de Gilbert</a>
-		<img src="{% static 'images/logo.png' %}" alt="" class="logo">
-	</nav>
-</div>
+	</div>
+	<ul class="nav navbar-nav ">
+		{% for navItem in navBar %}
+			{% if navItem.url == currentNav  %}
+		<li class="active">
+			{% else %}
+		<li>
+			{% endif %}
+			<a href="/{{ navItem.url }}/" class="glyphicon glyphicon-{{ navItem.icon }}"> {{ navItem.url|capfirst }}</a>
+		</li>
+		
+		{% endfor %}
+		
+	</ul>
+</nav>
