--- a/amigosdegilbert/static/css/base.css
+++ b/amigosdegilbert/static/css/base.css
@@ -37,32 +37,30 @@ a:focus
 {
 	position: absolute;
 	top: 20px;
-	right: 0;
+	right: 0px;
 	display: none;
-	background: #000000;
-	border:2px solid #444444;
-	-moz-border-radius-topleft: 20px;
-	-webkit-border-top-left-radius: 20px;
-	-moz-border-radius-bottomleft: 20px;
-	-webkit-border-bottom-left-radius: 20px;
+	background: rgba(0,0,0,.95);
+	border:2px solid #444;
+	border-right: none;
+	-moz-border-radius: 20px 0px 0px 20px;
+	-webkit-border-radius: 20px 0px 0px 20px;
 	width: 540px;
 	height: auto;
 	padding: 10px 10px 10px 100px;
 	filter: alpha(opacity=85);
-	opacity: .95;
 }
  
 .panelsito p
 {
-	margin: 0 0 15px 0;
-	padding: 0;
-	color: #cccccc;
+	margin: 0px 0px 15px 0px;
+	padding: 0px;
+	color: #CCC;
 }
  
 .panelsito a, .panelsito a:visited
 {
-	margin: 0;
-	padding: 0;
+	margin: 0px;
+	padding: 0px;
 	color: #9FC54E;
 	text-decoration: none;
 	border-bottom: 1px solid #9FC54E;
@@ -70,79 +68,65 @@ a:focus
  
 .panelsito a:hover, .panelsito a:visited:hover
 {
-	margin: 0;
-	padding: 0;
-	color: #ffffff;
+	margin: 0px;
+	padding: 0px;
+	color: #FFF;
 	text-decoration: none;
-	border-bottom: 1px solid #ffffff;
+	border-bottom: 1px solid #FFF;
 }
  
 a.trigger
 {
 	position: absolute;
-	top: 80px; right: 0;
+	top: 80px; right: 0px;
+	padding: 20px 40px 20px 15px;
+	
 	font-size: 16px;
 	letter-spacing:-1px;
 	font-family: verdana, helvetica, arial, sans-serif;
-	color:#fff;
-	padding: 20px 40px 20px 15px;
 	font-weight: 700;
-	background:#333333;
-	border:1px solid #444444;
-	-moz-border-radius-topleft: 20px;
-	-webkit-border-top-left-radius: 20px;
-	-moz-border-radius-bottomleft: 20px;
-	-webkit-border-bottom-left-radius: 20px;
-	-moz-border-radius-bottomleft: 0px;
-	-webkit-border-bottom-left-radius: 0px;
+	
+	color:#FFF;
+	background:#333;
+	border:1px solid #444;
+	-moz-border-radius: 20px 0px 0px 20px;
+	-webkit-border-radius: 20px 0px 0px 20px;
+	
 	display: block;
 }
  
 a.trigger:hover
 {
 	position: absolute;
+	padding-right: 60px;
 	text-decoration: none;
-	top: 80px; left: 0;
-	font-size: 16px;
-	letter-spacing:-1px;
-	font-family: verdana, helvetica, arial, sans-serif;
-	color:#fff;
-	padding: 20px 40px 20px 20px;
-	font-weight: 700;
-	background:#222222;
-	border:1px solid #444444;
-	-moz-border-radius-topleft: 20px;
-	-webkit-border-top-left-radius: 20px;
-	-moz-border-radius-bottomleft: 20px;
-	-webkit-border-bottom-left-radius: 20px;
-	-moz-border-radius-bottomleft: 0px;
-	-webkit-border-bottom-left-radius: 0px;
-	display: block;
+
+	background:#222;
 }
  
 a.active.trigger 
 {
-	background:#222222;
+	background:#222;
 }
  
 .columna-nav
 {
 	clear: both;
 	width: 330px;
-	padding: 0 0 20px 0;
+	padding: 0px 0px 20px 0px;
 	line-height: 22px;
 }
 
 ul
 {
-	padding: 0;
-	margin: 0;
+	padding: 0px;
+	margin: 0px;
 	list-style-type: none;
 }
  
 ul li
 {
-	padding: 0;
-	margin: 0;
+	padding: 0px;
+	margin: 0px;
 	list-style-type: none;
 }
