comprimiendo el scope de base-foot.js

--- a/amigosdegilbert/templates/contact/index.html
+++ b/amigosdegilbert/templates/contact/index.html
@@ -12,4 +12,7 @@
 	</div>
 	<div style="clear:both;"></div>
 </div>
-<a class="trigger" href="#">Contacto</a>
+<a class="trigger" href="#">
+	<span class="glyphicon glyphicon-envelope"></span>
+	<span class="inner-text">Contacto </span>
+</a>
