--- a/amigosdegilbert/static/css/base.css
+++ b/amigosdegilbert/static/css/base.css
@@ -12,21 +12,7 @@ input.buscar:focus{ width: 350px; }
 }
 /* logo nav-var preset */
 .logo,.nav.navbar-nav{ margin-left: 15px; }
-.header .navbar-nav .inner-text{ display: none;}
-
-/*  low resolution responsive */
-@media only screen  and (max-device-width : 1024px){
-	.content{
-		margin-top: 110px;
-	}
-	.header .up_wrap{
-		width: 100%;
-		/*border-bottom: dashed 1px #999;*/
-		background-color: #F0F0F0;
-	}
-	.logo, .navbar-brand{ display: inline-block; }
-	.header .navbar-nav .inner-text{ display: inline; }
-}
+.header .navbar-nav .inner-text, a.trigger>.inner-text{ display: none;}
 
 a:focus 
 {
@@ -35,19 +21,8 @@ a:focus
 
 .panelsito 
 {
-	position: absolute;
-<<<<<<< HEAD
-	top: 50px;
-	right: 0;
-	display: none;
-	background: #000000;
-	border: 2px solid #444444;
-	-moz-border-radius-topleft: 20px;
-	-webkit-border-top-left-radius: 20px;
-	-moz-border-radius-bottomleft: 20px;
-	-webkit-border-bottom-left-radius: 20px;
-=======
-	top: 20px;
+	position: fixed;
+	top: 80px;
 	right: 0px;
 	display: none;
 	background: rgba(0,0,0,.95);
@@ -55,7 +30,6 @@ a:focus
 	border-right: none;
 	-moz-border-radius: 20px 0px 0px 20px;
 	-webkit-border-radius: 20px 0px 0px 20px;
->>>>>>> 490ccea8892af974c4009a22065f34e912bb9fce
 	width: 540px;
 	height: auto;
 	padding: 10px 10px 10px 100px;
@@ -89,24 +63,14 @@ a:focus
  
 a.trigger
 {
-	position: absolute;
-	top: 80px; right: 0px;
+	position: fixed;
+	top: 90px; right: 0px;
 	padding: 20px 40px 20px 15px;
 	
 	font-size: 16px;
 	letter-spacing:-1px;
 	font-family: verdana, helvetica, arial, sans-serif;
 	font-weight: 700;
-<<<<<<< HEAD
-	background:#333333;
-	border: 2px solid #444444;
-	-moz-border-radius-topleft: 20px;
-	-webkit-border-top-left-radius: 20px;
-	-moz-border-radius-bottomleft: 20px;
-	-webkit-border-bottom-left-radius: 20px;
-	-moz-border-radius-bottomleft: 20px;
-	-webkit-border-bottom-left-radius: 20px;
-=======
 	
 	color:#FFF;
 	background:#333;
@@ -114,45 +78,22 @@ a.trigger
 	-moz-border-radius: 20px 0px 0px 20px;
 	-webkit-border-radius: 20px 0px 0px 20px;
 	
->>>>>>> 490ccea8892af974c4009a22065f34e912bb9fce
+
 	display: block;
 }
  
 a.trigger:hover
 {
-	position: absolute;
 	padding-right: 60px;
 	text-decoration: none;
-<<<<<<< HEAD
-	top: 80px; left: 0;
-	font-size: 16px;
-	letter-spacing:-1px;
-	font-family: verdana, helvetica, arial, sans-serif;
-	color:#fff;
-	padding: 20px 40px 20px 20px;
-	font-weight: 700;
-	background:#222222 url(static/images/plus.png) 85% 55% no-repeat;
-	border: 2px solid #444444;
-	-moz-border-radius-topleft: 20px;
-	-webkit-border-top-left-radius: 20px;
-	-moz-border-radius-bottomleft: 20px;
-	-webkit-border-bottom-left-radius: 20px;
-	-moz-border-radius-bottomleft: 20px;
-	-webkit-border-bottom-left-radius: 20px;
-	display: block;
-=======
-
 	background:#222;
->>>>>>> 490ccea8892af974c4009a22065f34e912bb9fce
 }
  
 a.active.trigger 
 {
-<<<<<<< HEAD
+
 	background:#222222 url(images/minus.png) 85% 55% no-repeat;
-=======
-	background:#222;
->>>>>>> 490ccea8892af974c4009a22065f34e912bb9fce
+
 }
  
 .columna-nav
@@ -175,4 +116,20 @@ ul li
 	padding: 0px;
 	margin: 0px;
 	list-style-type: none;
+}
+
+/*  low resolution responsive */
+@media only screen  and (max-device-width : 1024px){
+	.content{
+		margin-top: 110px;
+	}
+	.header .up_wrap{
+		width: 100%;
+		/*border-bottom: dashed 1px #999;*/
+		background-color: #F0F0F0;
+	}
+	.logo, .navbar-brand{ display: inline-block; }
+	.header .navbar-nav .inner-text{ display: inline; }
+	.panelsito{ top: 190px; }
+	a.trigger{  top: 200px;}
 }
