--- a/amigosdegilbert/templates/base.html
+++ b/amigosdegilbert/templates/base.html
@@ -31,7 +31,7 @@
 		{% block content %}
 		{% endblock %}
 		
-		<div class="publicidad col-md-2" style="display: inline-block;">
+		<div class="publicidad col-md-2" >
 			<!--Panel Lateral -->
 			{% include 'contact/index.html' %}
 			<!--endPanel-->
