--- a/amigosdegilbert/templates/banner/index.html
+++ b/amigosdegilbert/templates/banner/index.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
 
-<img src="{% static 'images/bono2010.gif' %}" alt="" />
-<img src="{% static 'images/ban_noti.gif' %}" alt="" />
-<img src="{% static 'images/ban_depor.gif' %}" alt="" />
+<img src="{% static 'images/bono2010.gif' %}" alt="" class="img-thumbnail" />
+<img src="{% static 'images/ban_noti.gif' %}" alt="" class="img-thumbnail" />
+<img src="{% static 'images/ban_depor.gif' %}" alt="" class="img-thumbnail" />
