modificaciones en diseño

--- a/amigosdegilbert/templates/contact/index.html
+++ b/amigosdegilbert/templates/contact/index.html
@@ -1,6 +1,6 @@
 <div class="panelsito">
-	<h3>Panel Slider Derecha!</h3>
-	<p>Panel usando Jquery a ver si me sale!!</p>
+	<h3>Contactanos:</h3>
+	<p>Envianos tu comentario o consultas.</p>
 	<div style="clear:both;"></div>
 	<div class="columna-nav">
 		<h3>Navegacion</h3>
