--- a/amigosdegilbert/static/css/base.css
+++ b/amigosdegilbert/static/css/base.css
@@ -35,27 +35,20 @@ a:focus
 
 .panelsito 
 {
-	position: absolute;
-<<<<<<< HEAD
-	top: 50px;
+	position: fixed;
+	top: 80px;
 	right: 0;
 	display: none;
-	background: #000000;
 	border: 2px solid #444444;
 	-moz-border-radius-topleft: 20px;
 	-webkit-border-top-left-radius: 20px;
 	-moz-border-radius-bottomleft: 20px;
 	-webkit-border-bottom-left-radius: 20px;
-=======
-	top: 20px;
-	right: 0px;
-	display: none;
+	-moz-border-radius: 20px 0px 0px 20px;
+	-webkit-border-radius: 20px 0px 0px 20px;
 	background: rgba(0,0,0,.95);
 	border:2px solid #444;
 	border-right: none;
-	-moz-border-radius: 20px 0px 0px 20px;
-	-webkit-border-radius: 20px 0px 0px 20px;
->>>>>>> 490ccea8892af974c4009a22065f34e912bb9fce
 	width: 540px;
 	height: auto;
 	padding: 10px 10px 10px 100px;
@@ -89,16 +82,13 @@ a:focus
  
 a.trigger
 {
-	position: absolute;
+	position: fixed;
 	top: 80px; right: 0px;
 	padding: 20px 40px 20px 15px;
-	
 	font-size: 16px;
 	letter-spacing:-1px;
 	font-family: verdana, helvetica, arial, sans-serif;
 	font-weight: 700;
-<<<<<<< HEAD
-	background:#333333;
 	border: 2px solid #444444;
 	-moz-border-radius-topleft: 20px;
 	-webkit-border-top-left-radius: 20px;
@@ -106,53 +96,23 @@ a.trigger
 	-webkit-border-bottom-left-radius: 20px;
 	-moz-border-radius-bottomleft: 20px;
 	-webkit-border-bottom-left-radius: 20px;
-=======
-	
-	color:#FFF;
-	background:#333;
-	border:1px solid #444;
 	-moz-border-radius: 20px 0px 0px 20px;
 	-webkit-border-radius: 20px 0px 0px 20px;
-	
->>>>>>> 490ccea8892af974c4009a22065f34e912bb9fce
+	color:#FFF;
+	background:#333;
 	display: block;
 }
  
 a.trigger:hover
 {
-	position: absolute;
 	padding-right: 60px;
 	text-decoration: none;
-<<<<<<< HEAD
-	top: 80px; left: 0;
-	font-size: 16px;
-	letter-spacing:-1px;
-	font-family: verdana, helvetica, arial, sans-serif;
-	color:#fff;
-	padding: 20px 40px 20px 20px;
-	font-weight: 700;
-	background:#222222 url(static/images/plus.png) 85% 55% no-repeat;
-	border: 2px solid #444444;
-	-moz-border-radius-topleft: 20px;
-	-webkit-border-top-left-radius: 20px;
-	-moz-border-radius-bottomleft: 20px;
-	-webkit-border-bottom-left-radius: 20px;
-	-moz-border-radius-bottomleft: 20px;
-	-webkit-border-bottom-left-radius: 20px;
-	display: block;
-=======
-
-	background:#222;
->>>>>>> 490ccea8892af974c4009a22065f34e912bb9fce
+	background:#222222;
 }
  
 a.active.trigger 
 {
-<<<<<<< HEAD
-	background:#222222 url(images/minus.png) 85% 55% no-repeat;
-=======
 	background:#222;
->>>>>>> 490ccea8892af974c4009a22065f34e912bb9fce
 }
  
 .columna-nav
