--- a/amigosdegilbert/templates/footer.html
+++ b/amigosdegilbert/templates/footer.html
@@ -1,3 +1,3 @@
 <div class="panel-footer">
-	<p>Desarrollado por Corujo Martin y Siri Ricardo &copy; </p>
+	<p>Desarrollado por Corujo Martin y Siri Ricardo &copy; 2013 Derechos Reservados.</p>
 </div>
